# resnet10

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  convert_jax_to_pytroch.py  download_hil_serl_weights.py  main.py  modeling_resnet.py  pyproject.toml  requirements-dev.txt  resnet10_forward.py  validate_outputs_are_same.py
resnet_10/: configuration_resnet.py  convert_jax_to_pytroch.py  modeling_resnet.py  test.py  test_conv.py  test_max_pool.py  validate.py  validate_outputs_are_same.py  validate_test.py
resnet_10/hil_serl/serl_launcher/serl_launcher/vision/: resnet_v1.py
tests/: test_modeling_resnet.py
