[project]
name = "resnet-10"
version = "0.1.0"
description = ""
authors = [
    {name = "Eugene Mironov",email = "helper2424@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.5.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.1"
isort = "^6.0.0"
mypy = "^1.14.1"
pylint = "^3.3.4"
pre-commit = "^4.1.0"
